kubernetes/clusters/homelab/apps/searxng/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: searxng
  name: searxng
  namespace: searxng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: searxng
  template:
    metadata:
      labels:
        app: searxng
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 977
        runAsGroup: 977
        fsGroup: 977
      containers:
        - image: searxng/searxng:2026.3.17-2bb8ac17c@sha256:090d7ef2e61cb540baf0db0656bfd4dfbcbba82604adb8ebfb5e316d09289fef
          name: searxng
          securityContext:
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: etc-searxng
              mountPath: /etc/searxng
            - name: certs
              mountPath: /etc/ssl/certs
      volumes:
        - name: tmp
          emptyDir: {}
        - name: etc-searxng
          emptyDir: {}
        - name: certs
          emptyDir: {}
