kubernetes/clusters/homelab/apps/searxng/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: searxng
  name: searxng-service
  namespace: searxng
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: searxng
  type: ClusterIP
