kubernetes/clusters/homelab/apps/searxng/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: searxng-ingress
  namespace: searxng
spec:
  ingressClassName: infra-traefik
  rules:
    - host: searxng.lab.hddq.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: searxng-service
                port:
                  number: 80
